<resources>
    <string name="app_name">Flipt(ed)</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prog_text">Mark Progress</string>
    <string name="check_circle_desc">check_circle</string>

    <string name="graded">This is your final score.</string>
    <string name="ungraded">Some of the questions have not been graded yet.</string>
    <string name="mission_task_item_column_text_1">TARGET ITEM</string>
    <string name="mission_task_item_column_text_2">MASTERY</string>

    <string name="selected_item">Selected item:</string>

    <string name="learning_target_item_column_text_1">TARGET ITEM</string>
    <string name="learning_target_item_column_text_2">MASTERY</string>

    <string name="mastery_not_graded">NOT GRADED</string>
    <string name="mastery_not_mastered">NOT MASTERED</string>
    <string name="mastery_nearly_mastered">NEARLY MASTERED</string>
    <string name="mastery_mastered">MASTERED</string>
    <string name="learning_objectives">LEARNING OBJECTIVES</string>
    <string name="points_gained">Points Gained:</string>
    <string name="score">Score:</string>
    <string name="percent">%</string>
    <string name="task_item">Task Item:</string>
    <string name="all_missions">All Missions</string>
    <string name="percent_empty">--%</string>
    <string name="edit_goal">Edit Goal</string>
    <string name="new_goal">Create New Goal</string>
    <string name="add_title">Add Title</string>
    <string name="add_due_date">Add Due Date</string>
    <string name="save_edits">Save Edits</string>
    <string name="add_subgoal_due_date">Add Subgoal Due Date</string>
    <string name="add_subgoal_title">Add Subgoal Title</string>
    <string name="goal_menu">Goal Menu</string>
    <string name="add_subgoal">Add Subgoal</string>
    <string name="add_a_goal">Add A Goal</string>


</resources>
